Alteracao leitura javascript

--- a/index.html
+++ b/index.html
@@ -38,21 +38,6 @@
 
     <div class="mascara-form"></div>
 </body>
-<script>
-    let formulario = document.querySelector(".fale-conosco")
-    let mascara = document.querySelector(".mascara-form")
-
-
-    function cliqueiNoBotao(){
-        formulario.style.left = "700px"
-        mascara.style.visibility = "visible"
-    }
-
-    function sumirFormulario(){
-        formulario.style.left = "-320px"
-        mascara.style.visibility = "hidden"
-    }
-
-</script>
+<script src="script.js"></script>
 
 </html>
